[package]
name = "agent-pair"
version = "0.1.0"
edition = "2021"
description = "Label-based TCP tunnel over yamux"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-yamux = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
socket2 = "0.6"
tracing = "0.1"
thiserror = "2"
tokio-tungstenite = "0.29"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portpicker = "0.1"

[[bin]]
name = "agentd"
path = "src/bin/agentd.rs"
required-features = ["cli"]

[features]
cli = ["clap", "tracing-subscriber"]
